# scan-kit

./: .gitignore  README.md  _debug_dose_err.py  _debug_ratios.py  _diag_arc.py  _diag_c2.py  _diag_odd.py  _diag_units.py  _patch_launcher.py  _test_constrained.py  _test_replay_run.py  build.py  diag_ratios.py  importtime.txt  optimize_peak_frac.py  pyproject.toml  requirements.txt  scan_kit.spec
.cursor/rules/: ai-scratch.mdc
.github/workflows/: build.yml
ai-scratch/: README.md
packaging/linux/: README-Linux.txt
scan_kit/: __init__.py  __main__.py  app.py  mag_analysis_1.py  pyi_rth_frozen.py  pyi_rth_linux_env.py  qt_launcher.py  zero_field_analysis_2.py  zero_field_analysis_4.py  zero_field_analysis_6.py  zero_field_analysis_current_and_position.py  zero_field_analysis_position_bars_3.py  zero_field_analysis_positions_1.py  zero_field_analysis_positions_g2_1.py  zero_field_analysis_ratios_7.py  zero_field_analysis_sigma 5.py
scan_kit/common/: __init__.py  amplifier_settling.py  app_icon.py  app_settings.py  beam_spills.py  confidence_correlation.py  debug_log_panel.py  devices_xml.py  file_integrity.py  g3_timeslice_position.py  ic_trajectory.py  io.py  linux_desktop.py  linux_frozen_env.py  matplotlib_backend.py  plot_colors.py  plotting.py  position_error_distribution.py  processing.py  (+22 more)
scripts/: capture_doc_screenshots.py
tests/: conftest.py  test_amplifier_columns.py  test_amplifier_correlation.py  test_amplifier_settling.py  test_app_icon.py  test_beam_motion_energy.py  test_beam_spills.py  test_config_tuning_xml.py  test_debug_log_panel.py  test_devices_xml.py  test_field_timeslice_replay.py  test_file_integrity.py  test_g2_timeslice_position.py  test_g3_iso_timeslice_position.py  test_g3_position_columns.py  test_ic_hv_transient.py  test_ic_trajectory.py  test_linux_desktop.py  test_map2map_attr_registry.py  test_matplotlib_backend.py  test_menu_bar.py  test_plan_synthesis.py  test_plotting_layout.py  test_position_error_distribution.py  test_qt_widgets.py  test_report.py  test_session_config_extraction.py  test_session_log.py  test_session_source_usecols.py  test_sigma_timeslice_replay.py  test_sigma_tuning.py  test_timeslice_chamber_position.py  test_timeslice_confidence.py  test_timeslice_confidence_coverage.py  test_timeslice_gaussian_fit_filter_coverage.py  test_timeslice_sigma.py  test_undo.py
(+119 files in other folders)
