[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-kit"
version = "0.1.0"
description = "Proton pencil beam scanning analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "sounddevice",
    "textual>=0.27.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
scan-kit = "scan_kit.app:main"

[tool.setuptools.packages.find]
include = ["scan_kit*"]
exclude = ["test_data*"]
