[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-kit"
dynamic = ["version"]
description = "Proton pencil beam scanning analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "sounddevice",
    "PySide6>=6.6.0",
    "pydicom",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
scan-kit = "scan_kit.app:main"

[tool.setuptools.dynamic]
version = {attr = "scan_kit.__version__"}

[tool.setuptools.packages.find]
include = ["scan_kit*"]
exclude = ["test_data*"]
