[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-kit"
dynamic = ["version"]
description = "Proton pencil beam scanning analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pyramid Technical Consultants, Inc.", email = "support@ptcusa.com" },
]
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "sounddevice",
    "PySide6>=6.6.0",
    "pydicom",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://www.pyramid.tech"
Repository = "https://github.com/Pyramid-Technical-Consultants/scan-kit"
Issues = "https://github.com/Pyramid-Technical-Consultants/scan-kit/issues"

[project.scripts]
scan-kit = "scan_kit.app:main"

[tool.setuptools.dynamic]
version = {attr = "scan_kit.__version__"}

[tool.setuptools.packages.find]
include = ["scan_kit*"]
exclude = ["test_data*"]

[tool.setuptools.package-data]
scan_kit = ["assets/*"]
